make non linear ops callable F(;m=m, rho=rho, ...)

--- a/examples/notebooks/judi_leading_edge_tutorial.ipynb
+++ b/examples/notebooks/judi_leading_edge_tutorial.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using JUDI, SlimOptim, SegyIO, Random, Statistics"
+    "using JUDI.TimeModeling, JUDI.SLIM_optim, SegyIO, Random, Statistics"
    ]
   },
   {
