make non linear ops callable F(;m=m, rho=rho, ...)

--- a/examples/notebooks/fwi_example_NLopt.ipynb
+++ b/examples/notebooks/fwi_example_NLopt.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "using Distributed; addprocs(2)\n",
-    "@everywhere using SegyIO, HDF5, PyPlot, JUDI.TimeModeling, NLopt, Random, LinearAlgebra, Printf"
+    "@everywhere using SegyIO, HDF5, PyPlot, JUDI, NLopt, Random, LinearAlgebra, Printf"
    ]
   },
   {
