--- a/examples/notebooks/judi_leading_edge_tutorial.ipynb
+++ b/examples/notebooks/judi_leading_edge_tutorial.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using JUDI, JUDI.SLIM_optim, SegyIO, Random, Statistics"
+    "using JUDI, JUDI.TimeModeling.SLIM_optim, SegyIO, Random, Statistics"
    ]
   },
   {
